--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMInCBnyWh6EI0IUPdR+5vG",
+      "authorship_tag": "ABX9TyOoRQTNaNM7iq/RlpqXUUKz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -494,11 +494,11 @@
         ""
       ],
       "metadata": {
-        "id": "QlNBA4OWL8SL",
-        "outputId": "5cad624a-e3ce-424c-e9ba-5f7d2bee1809",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QlNBA4OWL8SL",
+        "outputId": "5cad624a-e3ce-424c-e9ba-5f7d2bee1809"
       },
       "execution_count": 8,
       "outputs": [
@@ -1384,7 +1384,7 @@
         "    # # Output data entries with corresponding metrics for visualization in R\n",
         "    print(full_entdf)\n",
         "    full_entdf = full_entdf.reset_index(drop=True)\n",
-        "    full_entdf.to_csv(parentfolder  + 'data-fullmetrics.csv', index=False, header=True)\n",
+        "    full_entdf.to_csv(parentfolder  + 'newdata-fullmetrics.csv', index=False, header=True)\n",
         "\n",
         "    # # Output parameter & model fits\n",
         "    full_fitlist = pd.DataFrame(full_fitlist)\n",
@@ -1407,7 +1407,7 @@
         "                            ]\n",
         "\n",
         "    #print(\"full_fitlist:\",full_fitlist)\n",
-        "    full_fitlist.to_csv(parentfolder  + 'data-fullfits.csv', index=False, header=True)\n",
+        "    full_fitlist.to_csv(parentfolder  + 'newdata-fullfits.csv', index=False, header=True)\n",
         "\n",
         "    print(full_fitlist.head())\n",
         "    print(\"Results saved to '\" + parentfolder + \"'.\")\n",
@@ -1779,7 +1779,7 @@
         "        beta_dynamic_pswitchonly_troyer_phonemic = float(v[2]) # Optimized weight for phonemic cue\n",
         "\n",
         "        # 2.) Determine model fit (errors) at optimal parameters: will return total -LL\n",
-        "        optimal_fit_pswitchonlydynamic_troyer = forage.model_dynamic_pswitchonly_troyer([beta_dynamic_pswitchonly_troyer_freq, beta_dynamic_pswitchonly_troyer_semantic, beta_dynamic_pswitchonly_simdrop_troyer], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, troyer)\n",
+        "        optimal_fit_pswitchonlydynamic_troyer = forage.model_dynamic_pswitchonly_troyer([beta_dynamic_pswitchonly_troyer_freq, beta_dynamic_pswitchonly_troyer_semantic, beta_dynamic_pswitchonly_troyer_phonemic], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, troyer)\n",
         "\n",
         "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
         "        random_fit_pswitchonlydynamic_troyer = forage.model_dynamic_pswitchonly_troyer([0, 0, 0], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, troyer)\n",
@@ -1837,7 +1837,7 @@
       "metadata": {
         "id": "lP1sdQE5fR2L"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1860,9 +1860,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47cec328-c54f-4ca5-c68c-3e39cbbe4c82"
+        "outputId": "a36a20d6-0aed-4a23-f2b3-e93c936c233a"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1874,22 +1874,7 @@
             "SUBJECT 3/171 576\n",
             "SUBJECT 4/171 577\n",
             "SUBJECT 5/171 578\n",
-            "SUBJECT 6/171 579\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:429: RuntimeWarning: overflow encountered in double_scalars\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:430: RuntimeWarning: overflow encountered in power\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:435: RuntimeWarning: invalid value encountered in double_scalars\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "SUBJECT 6/171 579\n",
             "SUBJECT 7/171 580\n",
             "SUBJECT 8/171 581\n",
             "SUBJECT 9/171 582\n",
@@ -2053,55 +2038,31 @@
             "SUBJECT 167/171 494\n",
             "SUBJECT 168/171 495\n",
             "SUBJECT 169/171 496\n",
-            "SUBJECT 170/171 497\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:429: RuntimeWarning: overflow encountered in double_scalars\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:430: RuntimeWarning: overflow encountered in power\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:435: RuntimeWarning: invalid value encountered in double_scalars\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:430: RuntimeWarning: overflow encountered in double_scalars\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:435: RuntimeWarning: divide by zero encountered in log\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:430: RuntimeWarning: overflow encountered in multiply\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:389: RuntimeWarning: overflow encountered in double_scalars\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:390: RuntimeWarning: overflow encountered in power\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:395: RuntimeWarning: invalid value encountered in double_scalars\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:390: RuntimeWarning: overflow encountered in double_scalars\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:395: RuntimeWarning: divide by zero encountered in log\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:390: RuntimeWarning: overflow encountered in multiply\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "SUBJECT 170/171 497\n",
             "SUBJECT 171/171 498\n",
             "Fits Complete.\n",
-            "    sid  time        ent   freq       sim      phon  switch\n",
-            "0    51  1448        cat  3.529  0.000000  0.000000       0\n",
-            "1    51  1449        dog  3.993  0.760946  0.000100       0\n",
-            "2    51  1450      mouse  2.989  0.301437  0.000100       1\n",
-            "3    51  1451        rat  3.221  0.465104  0.000100       0\n",
-            "4    51  1452    giraffe  1.887  0.335645  0.250000       1\n",
-            "..  ...   ...        ...    ...       ...       ...     ...\n",
-            "22  498  3733       deer  2.648  0.534654  0.000100       0\n",
-            "23  498  3734  tarantula  1.672  0.262898  0.111111       0\n",
-            "24  498  3735     Fergie  0.500  0.068397  0.000100       1\n",
-            "25  498  3736   squirrel  2.447  0.148521  0.166667       0\n",
-            "26  498  3737    hamster  2.041  0.451015  0.000100       0\n",
+            "    sid  time        ent   freq       sim      phon  simdropswitch troyerswitch\n",
+            "0    51  1448        cat  3.529  0.000000  0.000000              0          NaN\n",
+            "1    51  1449        dog  3.993  0.760946  0.000100              0          NaN\n",
+            "2    51  1450      mouse  2.989  0.301437  0.000100              1          NaN\n",
+            "3    51  1451        rat  3.221  0.465104  0.000100              0          NaN\n",
+            "4    51  1452    giraffe  1.887  0.335645  0.250000              1          NaN\n",
+            "..  ...   ...        ...    ...       ...       ...            ...          ...\n",
+            "22  498  3733       deer  2.648  0.534654  0.000100              0          NaN\n",
+            "23  498  3734  tarantula  1.672  0.262898  0.111111              0          NaN\n",
+            "24  498  3735     Fergie  0.500  0.068397  0.000100              1          NaN\n",
+            "25  498  3736   squirrel  2.447  0.148521  0.166667              0          NaN\n",
+            "26  498  3737    hamster  2.041  0.451015  0.000100              0          NaN\n",
             "\n",
-            "[6639 rows x 7 columns]\n",
-            "   subject  ...  errors_staticphononly_random\n",
-            "0       51  ...                    232.669093\n",
-            "1      575  ...                    146.249144\n",
-            "2      576  ...                    398.861302\n",
-            "3      577  ...                    319.089042\n",
-            "4      578  ...                    252.612158\n",
+            "[6639 rows x 8 columns]\n",
+            "   subject  ...  errors_troyer_pglobaldynamic_random\n",
+            "0       51  ...                           232.669093\n",
+            "1      575  ...                           146.249144\n",
+            "2      576  ...                           398.861302\n",
+            "3      577  ...                           319.089042\n",
+            "4      578  ...                           252.612158\n",
             "\n",
-            "[5 rows x 48 columns]\n",
+            "[5 rows x 49 columns]\n",
             "Results saved to '/content/drive/My Drive/IU-Abhilasha-Mike/Fluency/sem-phon/fluency_cogsci2022/'.\n"
           ]
         }
