--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOoRQTNaNM7iq/RlpqXUUKz",
+      "authorship_tag": "ABX9TyOvxakpdiE864Y2bQxnMENR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,9 +202,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee975d7a-8362-454d-b3e3-c7f901202a90"
+        "outputId": "5ebfb896-3cc9-4edf-85c3-3108ddb2a643"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,8 +228,8 @@
     {
       "cell_type": "code",
       "source": [
-        "w1 = \"birds\"\n",
-        "w2 = \"pigs\"\n",
+        "w1 = \"tiger\"\n",
+        "w2 = \"bear\"\n",
         "print(\"wordbreak(w1)[0]:\",wordbreak(w1)[0])\n",
         "print(\"wordbreak(w2)[0]:\",wordbreak(w2)[0])\n",
         "\n",
@@ -244,20 +244,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52e40ee3-13b5-4ca9-911a-8c3763c6f75c"
+        "outputId": "67d0b05b-c474-4284-f490-2055a94b64fb"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "wordbreak(w1)[0]: ['B', 'ER1', 'D', 'Z']\n",
-            "wordbreak(w2)[0]: ['P', 'IH1', 'G', 'Z']\n",
-            "orig phon: 3\n",
-            "orig orth: 3\n",
-            "norm orth: 0.4\n",
-            "norm phon: 0.25\n"
+            "wordbreak(w1)[0]: ['T', 'AY1', 'G', 'ER0']\n",
+            "wordbreak(w2)[0]: ['B', 'EH1', 'R']\n",
+            "orig phon: 4\n",
+            "orig orth: 4\n",
+            "norm orth: 0.19999999999999996\n",
+            "norm phon: 0.0\n"
           ]
         }
       ]
@@ -491,26 +491,27 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "category1 = norms[norms['Animal'] == \"zebra\"]['Category'].values.tolist()\n",
+        "category2 = norms[norms['Animal'] == \"lion\"]['Category'].values.tolist()\n",
+        "print(category1, category2)\n",
+        "print(len(list(set(category1) & set(category2))))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QlNBA4OWL8SL",
-        "outputId": "5cad624a-e3ce-424c-e9ba-5f7d2bee1809"
+        "outputId": "a75b6f84-33fe-4f22-b37c-db9acde82a46"
       },
-      "execution_count": 8,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Fish']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Africananimals'] ['Africananimals', 'Feline']\n",
+            "1\n"
+          ]
         }
       ]
     },
@@ -1347,7 +1348,6 @@
         "                else:\n",
         "                    sim_list.append(0)\n",
         "                    sim_history.append( np.array(sim_current[simlab.index(word),:]) )\n",
-        "                #sim_current[:,simlab.index(word)] = 0.00000001\n",
         "                    phon_list.append(0)\n",
         "                    phon_history.append( np.array(phon_current[simlab.index(word),:]) )\n",
         "\n",
@@ -1366,7 +1366,7 @@
         "        # Save my entries with corresponding metrics\n",
         "        mydf = pd.DataFrame({'sid':[sid]*len(myused) , 'ent':myused, 'freq':freq_list, 'sim':sim_list, 'phon': phon_list,\n",
         "                             'simdropswitch':myswitch, 'troyer': troyer_switch, 'time':mytime},\n",
-        "                            columns=['sid','time','ent','freq','sim', 'phon', 'simdropswitch', 'troyerswitch'])\n",
+        "                            columns=['sid','time','ent','freq','sim', 'phon', 'simdropswitch', 'troyer'])\n",
         "        full_entdf = full_entdf.append(mydf)\n",
         "        # Get parameter fits for the different models\n",
         "        myfitlist.append(sid)\n",
@@ -1837,7 +1837,7 @@
       "metadata": {
         "id": "lP1sdQE5fR2L"
       },
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1860,9 +1860,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a36a20d6-0aed-4a23-f2b3-e93c936c233a"
+        "outputId": "49e38cd7-b33c-487a-fe9c-78ee49362641"
       },
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -2041,18 +2041,18 @@
             "SUBJECT 170/171 497\n",
             "SUBJECT 171/171 498\n",
             "Fits Complete.\n",
-            "    sid  time        ent   freq       sim      phon  simdropswitch troyerswitch\n",
-            "0    51  1448        cat  3.529  0.000000  0.000000              0          NaN\n",
-            "1    51  1449        dog  3.993  0.760946  0.000100              0          NaN\n",
-            "2    51  1450      mouse  2.989  0.301437  0.000100              1          NaN\n",
-            "3    51  1451        rat  3.221  0.465104  0.000100              0          NaN\n",
-            "4    51  1452    giraffe  1.887  0.335645  0.250000              1          NaN\n",
-            "..  ...   ...        ...    ...       ...       ...            ...          ...\n",
-            "22  498  3733       deer  2.648  0.534654  0.000100              0          NaN\n",
-            "23  498  3734  tarantula  1.672  0.262898  0.111111              0          NaN\n",
-            "24  498  3735     Fergie  0.500  0.068397  0.000100              1          NaN\n",
-            "25  498  3736   squirrel  2.447  0.148521  0.166667              0          NaN\n",
-            "26  498  3737    hamster  2.041  0.451015  0.000100              0          NaN\n",
+            "    sid  time        ent   freq       sim      phon  simdropswitch  troyer\n",
+            "0    51  1448        cat  3.529  0.000000  0.000000              0       0\n",
+            "1    51  1449        dog  3.993  0.760946  0.000100              0       0\n",
+            "2    51  1450      mouse  2.989  0.301437  0.000100              1       1\n",
+            "3    51  1451        rat  3.221  0.465104  0.000100              0       0\n",
+            "4    51  1452    giraffe  1.887  0.335645  0.250000              1       1\n",
+            "..  ...   ...        ...    ...       ...       ...            ...     ...\n",
+            "22  498  3733       deer  2.648  0.534654  0.000100              0       0\n",
+            "23  498  3734  tarantula  1.672  0.262898  0.111111              0       1\n",
+            "24  498  3735     Fergie  0.500  0.068397  0.000100              1       1\n",
+            "25  498  3736   squirrel  2.447  0.148521  0.166667              0       1\n",
+            "26  498  3737    hamster  2.041  0.451015  0.000100              0       0\n",
             "\n",
             "[6639 rows x 8 columns]\n",
             "   subject  ...  errors_troyer_pglobaldynamic_random\n",
