adding participant-based switch models

--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOvxakpdiE864Y2bQxnMENR",
+      "authorship_tag": "ABX9TyP7IqD8ge5bwEuMikhjMvtV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ggNcnk34d2O4",
         "colab": {
@@ -96,7 +96,7 @@
         },
         "outputId": "10bcc578-ebab-4074-d3bc-bdd214f6d6f2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "7f1RA_0MeKWo"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
         },
         "outputId": "5ebfb896-3cc9-4edf-85c3-3108ddb2a643"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
         },
         "outputId": "67d0b05b-c474-4284-f490-2055a94b64fb"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "9Fa39hPKfWI-"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,7 +503,7 @@
         "id": "QlNBA4OWL8SL",
         "outputId": "a75b6f84-33fe-4f22-b37c-db9acde82a46"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,7 +1202,7 @@
         "    import re\n",
         "\n",
         "    ### LOAD BEHAVIORAL DATA ###\n",
-        "    df = pd.read_csv(path, header=None, names=['SID', 'entry'], delimiter=delimiter)\n",
+        "    df = pd.read_csv(path, header=None, names=['SID', 'entry', 'participantswitch'], delimiter=delimiter)\n",
         "\n",
         "    #correct behavioral fits\n",
         "    df = forage.prepareData(df)\n",
@@ -1363,16 +1363,21 @@
         "            if (sim_list[i+1] > sim_list[i]) and (sim_list[i-1] > sim_list[i]):\n",
         "                myswitch[i] = 1\n",
         "\n",
+        "\n",
+        "        # obtain participant-designated switches from file containing switches\n",
+        "        \n",
+        "        participantswitches = list(df[df['SID']==sid]['participantswitch'])\n",
+        "\n",
         "        # Save my entries with corresponding metrics\n",
         "        mydf = pd.DataFrame({'sid':[sid]*len(myused) , 'ent':myused, 'freq':freq_list, 'sim':sim_list, 'phon': phon_list,\n",
-        "                             'simdropswitch':myswitch, 'troyer': troyer_switch, 'time':mytime},\n",
-        "                            columns=['sid','time','ent','freq','sim', 'phon', 'simdropswitch', 'troyer'])\n",
+        "                             'simdropswitch':myswitch, 'troyer': troyer_switch, 'participantswitch': participantswitches,'time':mytime},\n",
+        "                            columns=['sid','time','ent','freq','sim', 'phon','participantswitch', 'simdropswitch', 'troyer'])\n",
         "        full_entdf = full_entdf.append(mydf)\n",
         "        # Get parameter fits for the different models\n",
         "        myfitlist.append(sid)\n",
         "        myfitlist.append(len(myused))\n",
         "        ## obtaining the optimal/random fits for the static and dynamic model by calling the getFits function\n",
-        "        myfitlist.extend( forage.getfits(freq_list, freq_history, sim_list, sim_history, phon_list, phon_history, troyer_switch) )\n",
+        "        myfitlist.extend( forage.getfits(freq_list, freq_history, sim_list, sim_history, phon_list, phon_history, troyer_switch, participantswitches) )\n",
         "        full_fitlist.append(myfitlist)\n",
         "\n",
         "    print(\"Fits Complete.\")\n",
@@ -1661,9 +1666,91 @@
         "                denrat = sum(pow(freqh[k],beta[0])*pow(phonh[k],beta[2])*pow(simh[k],beta[1]))\n",
         "            ct += -np.log(numrat/denrat)\n",
         "        return ct\n",
+        "\n",
+        "## PARTICIPANT DESIGNATED fits : switch in dynamic models is based on PARTICIPANT-DESIGNATED SWITCHES/CLUSTERS\n",
+        "\n",
+        "    def model_dynamic_psyrev_participant(beta, freql, freqh, siml, simh, participant):\n",
+        "        import numpy as np\n",
+        "        ct = 0\n",
+        "        for k in range(0, len(freql)):\n",
+        "            if k == 0 :\n",
+        "            # P of item based on frequency alone (freq of this item / freq of all items)\n",
+        "                numrat = pow(freql[k],beta[0])\n",
+        "                denrat = sum(pow(freqh[k],beta[0]))\n",
+        "            elif participant[k] == 1:## switch based on if participant category changes\n",
+        "            # If similarity dips, P of item is based again on frequency\n",
+        "                numrat = pow(freql[k],beta[0])\n",
+        "                denrat = sum(pow(freqh[k],beta[0]))\n",
+        "            else:\n",
+        "            # P of item based on combined frequency and similarity\n",
+        "                numrat = pow(freql[k],beta[0])*pow(siml[k],beta[1])\n",
+        "                denrat = sum(pow(freqh[k],beta[0])*pow(simh[k],beta[1]))\n",
+        "            ct += -np.log(numrat/denrat)\n",
+        "        return ct\n",
+        "      \n",
+        "    def model_dynamic_pswitchonly_participant(beta, freql, freqh, siml, simh, phonl, phonh, participant):\n",
+        "      ## here we use phonology as a \"local\" cue with semantics\n",
+        "        import numpy as np\n",
+        "        ct = 0\n",
+        "        for k in range(0, len(freql)):\n",
+        "            if k == 0 :\n",
+        "            # P of item based on frequency alone (freq of this item / freq of all items)\n",
+        "                numrat = pow(freql[k],beta[0])\n",
+        "                denrat = sum(pow(freqh[k],beta[0]))\n",
+        "            elif participant[k] == 1: ## \"dip\" based on sim-drop\n",
+        "            # If similarity dips, P of item is based on a combination of frequency and phonemic similarity\n",
+        "                numrat = pow(freql[k],beta[0]) * pow(phonl[k],beta[2]) \n",
+        "                denrat = sum(pow(freqh[k],beta[0]) * pow(phonh[k],beta[2]) )\n",
+        "            else:\n",
+        "            # P of item based on combined frequency and similarity\n",
+        "                numrat = pow(freql[k],beta[0])*pow(siml[k],beta[1])\n",
+        "                denrat = sum(pow(freqh[k],beta[0])*pow(simh[k],beta[1]))\n",
+        "            ct += -np.log(numrat/denrat)\n",
+        "        return ct\n",
         "    \n",
         "\n",
-        "    def getfits( freq_l, freq_h, sim_l, sim_h, phon_l, phon_h , troyer):\n",
+        "    def model_dynamic_plocal_participant(beta, freql, freqh, siml, simh, phonl, phonh, participant):\n",
+        "      ## here we use phonology as a \"local\" cue with semantics\n",
+        "        import numpy as np\n",
+        "        ct = 0\n",
+        "        for k in range(0, len(freql)):\n",
+        "            if k == 0 :\n",
+        "            # P of item based on frequency alone (freq of this item / freq of all items)\n",
+        "                numrat = pow(freql[k],beta[0])\n",
+        "                denrat = sum(pow(freqh[k],beta[0]))\n",
+        "            elif participant[k] == 1:\n",
+        "            # If similarity dips, P of item is based on frequency \n",
+        "                numrat = pow(freql[k],beta[0]) \n",
+        "                denrat = sum(pow(freqh[k],beta[0]))\n",
+        "            else:\n",
+        "            # P of item based on combined frequency and similarity\n",
+        "                numrat = pow(freql[k],beta[0])*pow(phonl[k],beta[2])*pow(siml[k],beta[1])\n",
+        "                denrat = sum(pow(freqh[k],beta[0])*pow(phonh[k],beta[2])*pow(simh[k],beta[1]))\n",
+        "            ct += -np.log(numrat/denrat)\n",
+        "        return ct\n",
+        "\n",
+        "    def model_dynamic_pglobal_participant(beta, freql, freqh, siml, simh, phonl, phonh, participant):\n",
+        "      ## here we use phonology as a \"local\" cue with semantics\n",
+        "        import numpy as np\n",
+        "        ct = 0\n",
+        "        for k in range(0, len(freql)):\n",
+        "            if k == 0 :\n",
+        "            # P of item based on frequency alone (freq of this item / freq of all items)\n",
+        "                numrat = pow(freql[k],beta[0])\n",
+        "                denrat = sum(pow(freqh[k],beta[0]))\n",
+        "            elif troyer[k] == 1:\n",
+        "            # If similarity dips, P of item is based on a combination of frequency and phonemic similarity\n",
+        "                numrat = pow(freql[k],beta[0]) * pow(phonl[k],beta[2]) \n",
+        "                denrat = sum(pow(freqh[k],beta[0]) * pow(phonh[k],beta[2]) )\n",
+        "            else:\n",
+        "            # P of item based on combined frequency and similarity\n",
+        "                numrat = pow(freql[k],beta[0])*pow(phonl[k],beta[2])*pow(siml[k],beta[1])\n",
+        "                denrat = sum(pow(freqh[k],beta[0])*pow(phonh[k],beta[2])*pow(simh[k],beta[1]))\n",
+        "            ct += -np.log(numrat/denrat)\n",
+        "        return ct\n",
+        "\n",
+        "\n",
+        "    def getfits( freq_l, freq_h, sim_l, sim_h, phon_l, phon_h , troyer, participantswitches):\n",
         "        import numpy as np\n",
         "        from scipy.optimize import fmin\n",
         "    #fmin: Uses a Nelder-Mead simplex algorithm to find the minimum of function of variables.\n",
@@ -1813,7 +1900,20 @@
         "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
         "        random_fit_pglobaldynamic_troyer = forage.model_dynamic_pglobal_troyer([0, 0, 0], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, troyer)\n",
         "      \n",
+        "## participant based dynamic models\n",
         "\n",
+        "        # TROYER DYNAMIC MODEL (switches dynamically between cues)\n",
+        "\n",
+        "        # 1.) Optimize model parameters\n",
+        "        v = fmin(forage.model_dynamic_psyrev_participant, [r1,r2], args=(freq_l, freq_h, sim_l, sim_h, troyer), ftol = 0.001, disp=False)\n",
+        "        beta_dynamic_troyer_freq = float(v[0]) # Optimized weight for frequency cue\n",
+        "        beta_dynamic_troyer_semantic = float(v[1]) # Optimized weight for similarity cue\n",
+        "\n",
+        "        # 2.) Determine model fit (errors) at optimal parameters: will return total -LL\n",
+        "        optimal_fit_dynamic_troyer = forage.model_dynamic_psyrev_troyer([beta_dynamic_troyer_freq, beta_dynamic_troyer_semantic], freq_l, freq_h, sim_l, sim_h, troyer)\n",
+        "\n",
+        "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
+        "        random_fit_dynamic_troyer = forage.model_dynamic_psyrev_troyer([0,0], freq_l, freq_h, sim_l, sim_h, troyer)\n",
         "        results = [ beta_static_freq, beta_static_semantic, float(optimal_fit_static), float(random_fit_static),\n",
         "                   beta_static_plocal_freq, beta_static_plocal_semantic, beta_static_plocal_phonemic, float(optimal_fit_plocalstatic), float(random_fit_plocalstatic),\n",
         "                  \n",
@@ -1837,7 +1937,7 @@
       "metadata": {
         "id": "lP1sdQE5fR2L"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1862,7 +1962,7 @@
         },
         "outputId": "49e38cd7-b33c-487a-fe9c-78ee49362641"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
