updated participant models

--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyP7IqD8ge5bwEuMikhjMvtV",
+      "authorship_tag": "ABX9TyMJHWYTnpfZimiGid92VveI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,13 +50,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ggNcnk34d2O4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16f70a49-7a65-4f6a-ed68-76f2b95e2827"
+        "outputId": "f2ead17a-f8ab-4f8c-ddf3-f211aef774ee"
       },
       "outputs": [
         {
@@ -94,16 +94,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "10bcc578-ebab-4074-d3bc-bdd214f6d6f2"
+        "outputId": "f4e6129b-fcba-422a-8e6c-fb54008b42d5"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Found GPU at: /device:GPU:0\n",
-            "Wed Jan 19 16:18:01 2022       \n",
+            "Tue Jan 25 21:30:57 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 495.46       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -112,7 +112,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   38C    P0    31W / 250W |    375MiB / 16280MiB |      1%      Default |\n",
+            "| N/A   46C    P0    37W / 250W |    375MiB / 16280MiB |      1%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "7f1RA_0MeKWo"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -274,9 +274,9 @@
     {
       "cell_type": "code",
       "source": [
-        "parentfolder = \"/content/drive/My Drive/IU-Abhilasha-Mike/Fluency/sem-phon/fluency_cogsci2022\"\n",
+        "parentfolder = \"/content/drive/My Drive/IU-Abhilasha-Mike/Fluency/sem-phon/fluency_cogsci2022/\"\n",
         "with tf.device('/device:GPU:0'):\n",
-        "  semantic_files = glob.glob(parentfolder + '/*.xlsx')\n",
+        "  semantic_files = glob.glob(parentfolder + '*.xlsx')\n",
         "print(f\"This folder has {len(semantic_files)} files\")"
       ],
       "metadata": {
@@ -284,9 +284,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "24cf4fca-6712-46aa-8f7b-c8389372c856"
+        "outputId": "50169e45-9ef3-41ac-9889-847c0ae3777b"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1408,7 +1408,13 @@
         "                            'beta_troyer_pswitchonlydynamic_frequency', 'beta_troyer_pswitchonlydynamic_semantic', 'beta_troyer_pswitchonlydynamic_phonemic','errors_troyer_pswitchonlydynamic_optimal', 'errors_troyer_pswitchonlydynamic_random',\n",
         "\n",
         "                            'beta_troyer_plocaldynamic_frequency', 'beta_troyer_plocaldynamic_semantic', 'beta_troyer_plocaldynamic_phonemic','errors_troyer_plocaldynamic_optimal', 'errors_troyer_plocaldynamic_random',\n",
-        "                            'beta_troyer_pglobaldynamic_frequency', 'beta_troyer_pglobaldynamic_semantic', 'beta_troyer_pglobaldynamic_phonemic','errors_troyer_pglobaldynamic_optimal', 'errors_troyer_pglobaldynamic_random'\n",
+        "                            'beta_troyer_pglobaldynamic_frequency', 'beta_troyer_pglobaldynamic_semantic', 'beta_troyer_pglobaldynamic_phonemic','errors_troyer_pglobaldynamic_optimal', 'errors_troyer_pglobaldynamic_random',\n",
+        "\n",
+        "                            'beta_participant_dynamic_frequency', 'beta_participant_dynamic_semantic', 'errors_participant_dynamic_optimal', 'errors_participant_dynamic_random',\n",
+        "                            'beta_participant_pswitchonlydynamic_frequency', 'beta_participant_pswitchonlydynamic_semantic', 'beta_participant_pswitchonlydynamic_phonemic','errors_participant_pswitchonlydynamic_optimal', 'errors_participant_pswitchonlydynamic_random',\n",
+        "\n",
+        "                            'beta_participant_plocaldynamic_frequency', 'beta_participant_plocaldynamic_semantic', 'beta_participant_plocaldynamic_phonemic','errors_participant_plocaldynamic_optimal', 'errors_participant_plocaldynamic_random',\n",
+        "                            'beta_participant_pglobaldynamic_frequency', 'beta_participant_pglobaldynamic_semantic', 'beta_participant_pglobaldynamic_phonemic','errors_participant_pglobaldynamic_optimal', 'errors_participant_pglobaldynamic_random'\n",
         "                            ]\n",
         "\n",
         "    #print(\"full_fitlist:\",full_fitlist)\n",
@@ -1738,7 +1744,7 @@
         "            # P of item based on frequency alone (freq of this item / freq of all items)\n",
         "                numrat = pow(freql[k],beta[0])\n",
         "                denrat = sum(pow(freqh[k],beta[0]))\n",
-        "            elif troyer[k] == 1:\n",
+        "            elif participant[k] == 1:\n",
         "            # If similarity dips, P of item is based on a combination of frequency and phonemic similarity\n",
         "                numrat = pow(freql[k],beta[0]) * pow(phonl[k],beta[2]) \n",
         "                denrat = sum(pow(freqh[k],beta[0]) * pow(phonh[k],beta[2]) )\n",
@@ -1902,18 +1908,64 @@
         "      \n",
         "## participant based dynamic models\n",
         "\n",
-        "        # TROYER DYNAMIC MODEL (switches dynamically between cues)\n",
+        "        # participant DYNAMIC MODEL (switches dynamically between cues)\n",
         "\n",
         "        # 1.) Optimize model parameters\n",
-        "        v = fmin(forage.model_dynamic_psyrev_participant, [r1,r2], args=(freq_l, freq_h, sim_l, sim_h, troyer), ftol = 0.001, disp=False)\n",
-        "        beta_dynamic_troyer_freq = float(v[0]) # Optimized weight for frequency cue\n",
-        "        beta_dynamic_troyer_semantic = float(v[1]) # Optimized weight for similarity cue\n",
+        "        v = fmin(forage.model_dynamic_psyrev_participant, [r1,r2], args=(freq_l, freq_h, sim_l, sim_h, participantswitches), ftol = 0.001, disp=False)\n",
+        "        beta_dynamic_participant_freq = float(v[0]) # Optimized weight for frequency cue\n",
+        "        beta_dynamic_participant_semantic = float(v[1]) # Optimized weight for similarity cue\n",
         "\n",
         "        # 2.) Determine model fit (errors) at optimal parameters: will return total -LL\n",
-        "        optimal_fit_dynamic_troyer = forage.model_dynamic_psyrev_troyer([beta_dynamic_troyer_freq, beta_dynamic_troyer_semantic], freq_l, freq_h, sim_l, sim_h, troyer)\n",
+        "        optimal_fit_dynamic_participant = forage.model_dynamic_psyrev_participant([beta_dynamic_participant_freq, beta_dynamic_participant_semantic], freq_l, freq_h, sim_l, sim_h, participantswitches)\n",
         "\n",
         "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
-        "        random_fit_dynamic_troyer = forage.model_dynamic_psyrev_troyer([0,0], freq_l, freq_h, sim_l, sim_h, troyer)\n",
+        "        random_fit_dynamic_participant = forage.model_dynamic_psyrev_participant([0,0], freq_l, freq_h, sim_l, sim_h, participantswitches)\n",
+        "\n",
+        "        # participant DYNAMIC PHON SWITCH ONLY MODEL (switches dynamically between cues, phonology is a GLOBAL cue with frequency)\n",
+        "\n",
+        "        # 1.) Optimize model parameters\n",
+        "        v = fmin(forage.model_dynamic_pswitchonly_participant, [r1,r2, r3], args=(freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches), ftol = 0.001, disp=False)\n",
+        "        beta_dynamic_pswitchonly_participant_freq = float(v[0]) # Optimized weight for frequency cue\n",
+        "        beta_dynamic_pswitchonly_participant_semantic = float(v[1]) # Optimized weight for similarity cue\n",
+        "        beta_dynamic_pswitchonly_participant_phonemic = float(v[2]) # Optimized weight for phonemic cue\n",
+        "\n",
+        "        # 2.) Determine model fit (errors) at optimal parameters: will return total -LL\n",
+        "        optimal_fit_pswitchonlydynamic_participant = forage.model_dynamic_pswitchonly_participant([beta_dynamic_pswitchonly_participant_freq, beta_dynamic_pswitchonly_participant_semantic, beta_dynamic_pswitchonly_participant_phonemic], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches)\n",
+        "\n",
+        "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
+        "        random_fit_pswitchonlydynamic_participant = forage.model_dynamic_pswitchonly_participant([0, 0, 0], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches)\n",
+        "          \n",
+        "\n",
+        "      # participant DYNAMIC PHON LOCAL MODEL (switches dynamically between cues, phonology,semantic, freq is a LOCAL cue)\n",
+        "\n",
+        "        # 1.) Optimize model parameters\n",
+        "        v = fmin(forage.model_dynamic_plocal_participant, [r1,r2, r3], args=(freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches), ftol = 0.001, disp=False)\n",
+        "        beta_dynamic_plocal_participant_freq = float(v[0]) # Optimized weight for frequency cue\n",
+        "        beta_dynamic_plocal_participant_semantic = float(v[1]) # Optimized weight for similarity cue\n",
+        "        beta_dynamic_plocal_participant_phonemic = float(v[2]) # Optimized weight for phonemic cue\n",
+        "\n",
+        "        # 2.) Determine model fit (errors) at optimal parameters: will return total -LL\n",
+        "        optimal_fit_plocaldynamic_participant = forage.model_dynamic_plocal_participant([beta_dynamic_plocal_participant_freq, beta_dynamic_plocal_participant_semantic, beta_dynamic_plocal_participant_phonemic], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches)\n",
+        "\n",
+        "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
+        "        random_fit_plocaldynamic_participant = forage.model_dynamic_plocal_participant([0, 0, 0], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches)\n",
+        "\n",
+        "     # participant DYNAMIC PHON GLOBAL MODEL (switches dynamically between cues, phonology is a GLOBAL cue with frequency)\n",
+        "\n",
+        "        # 1.) Optimize model parameters\n",
+        "        v = fmin(forage.model_dynamic_pglobal_participant, [r1,r2, r3], args=(freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches), ftol = 0.001, disp=False)\n",
+        "        beta_dynamic_pglobal_participant_freq = float(v[0]) # Optimized weight for frequency cue\n",
+        "        beta_dynamic_pglobal_participant_semantic = float(v[1]) # Optimized weight for similarity cue\n",
+        "        beta_dynamic_pglobal_participant_phonemic = float(v[2]) # Optimized weight for phonemic cue\n",
+        "\n",
+        "        # 2.) Determine model fit (errors) at optimal parameters: will return total -LL\n",
+        "        optimal_fit_pglobaldynamic_participant = forage.model_dynamic_pglobal_participant([beta_dynamic_pglobal_participant_freq, beta_dynamic_pglobal_participant_semantic, beta_dynamic_pglobal_participant_phonemic], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches)\n",
+        "\n",
+        "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
+        "        random_fit_pglobaldynamic_participant = forage.model_dynamic_pglobal_participant([0, 0, 0], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h, participantswitches)\n",
+        "      \n",
+        "        \n",
+        "        ## results\n",
         "        results = [ beta_static_freq, beta_static_semantic, float(optimal_fit_static), float(random_fit_static),\n",
         "                   beta_static_plocal_freq, beta_static_plocal_semantic, beta_static_plocal_phonemic, float(optimal_fit_plocalstatic), float(random_fit_plocalstatic),\n",
         "                  \n",
@@ -1928,7 +1980,13 @@
         "                   beta_dynamic_pswitchonly_troyer_freq, beta_dynamic_pswitchonly_troyer_semantic, beta_dynamic_pswitchonly_troyer_phonemic, float(optimal_fit_pswitchonlydynamic_troyer), float(random_fit_pswitchonlydynamic_troyer),\n",
         "\n",
         "                   beta_dynamic_plocal_troyer_freq, beta_dynamic_plocal_troyer_semantic, beta_dynamic_plocal_troyer_phonemic, float(optimal_fit_plocaldynamic_troyer), float(random_fit_plocaldynamic_troyer),\n",
-        "                   beta_dynamic_pglobal_troyer_freq, beta_dynamic_pglobal_troyer_semantic, beta_dynamic_pglobal_troyer_phonemic, float(optimal_fit_pglobaldynamic_troyer), float(random_fit_pglobaldynamic_troyer)\n",
+        "                   beta_dynamic_pglobal_troyer_freq, beta_dynamic_pglobal_troyer_semantic, beta_dynamic_pglobal_troyer_phonemic, float(optimal_fit_pglobaldynamic_troyer), float(random_fit_pglobaldynamic_troyer),\n",
+        "\n",
+        "                   beta_dynamic_participant_freq, beta_dynamic_participant_semantic, float(optimal_fit_dynamic_participant), float(random_fit_dynamic_participant),\n",
+        "                   beta_dynamic_pswitchonly_participant_freq, beta_dynamic_pswitchonly_participant_semantic, beta_dynamic_pswitchonly_participant_phonemic, float(optimal_fit_pswitchonlydynamic_participant), float(random_fit_pswitchonlydynamic_participant),\n",
+        "\n",
+        "                   beta_dynamic_plocal_participant_freq, beta_dynamic_plocal_participant_semantic, beta_dynamic_plocal_participant_phonemic, float(optimal_fit_plocaldynamic_participant), float(random_fit_plocaldynamic_participant),\n",
+        "                   beta_dynamic_pglobal_participant_freq, beta_dynamic_pglobal_participant_semantic, beta_dynamic_pglobal_participant_phonemic, float(optimal_fit_pglobaldynamic_participant), float(random_fit_pglobaldynamic_participant)\n",
         "\n",
         "                   ]\n",
         "\n",
@@ -1937,7 +1995,7 @@
       "metadata": {
         "id": "lP1sdQE5fR2L"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
